# protorpc

./: meson.build  meson_options.txt
examples/: meson.build
examples/calculator/: main.cpp  meson.build
examples/calculator/idl/: calculator.sidl  meson.build
examples/state_holding/: main.cpp  meson.build
examples/state_holding/idl/: database.sidl  meson.build
libcprotorpc/: meson.build
libcprotorpc/include/cprotorpc/: serializer.h  sidl_types.h  structures.h  unserializer.h
libcprotorpc/src/: serializer.c  structures.c  unserializer.c
libcprotorpc/tests/: serialization_tests.cpp
libprotoipc/: meson.build
libprotoipc/include/protoipc/: message.hh  port.hh  router.hh
libprotoipc/src/: linux_port.cpp  linux_router.cpp
libprotoipc/tests/: ipc_tests.cpp
libprotorpc/: meson.build
libprotorpc/include/protorpc/: broker.hh  channel.hh  exchannel.hh  exrpcobject.hh  message.hh  rpcobject.hh  serializer.hh  unserializer.hh
libprotorpc/src/: broker.cpp  channel.cpp  exchannel.cpp  exrpcobject.cpp  rpcobject.cpp
libprotorpc/tests/: rpc_simple_tests.cpp
sidl/: meson.build  sidlcc.py  test.py  test_sidl.py
sidl/sidl/: ast.py  compiler.py  lexer.py  parser.py  proxy_compiler.py  type_resolver.py  utils.py
sidl/sidl/backend/: c.py
